...
                                child: Column(
                                  mainAxisSize: MainAxisSize.max,
                                  children: [
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey('SignUp-Email_m7rc'),
                                        controller:
                                            _model.signUpEmailTextController,
                                        focusNode: _model.signUpEmailFocusNode,
                                        onChanged: (_) => EasyDebounce.debounce(
                                          '_model.signUpEmailTextController',
                                          Duration(milliseconds: 2000),
...
                                            .asValidator(context),
                                      ),
                                    ),
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey('SignUp-Password_qckj'),
                                        controller:
                                            _model.signUpPasswordTextController,
                                        focusNode:
                                            _model.signUpPasswordFocusNode,
                                        autofocus: false,
                                        textInputAction: TextInputAction.next,
...
                                      ),
                                    ),
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey(
                                            'SignUp-ConfirmPassword_7mys'),
                                        controller: _model
                                            .signUpConfirmPasswordTextController,
                                        focusNode: _model
                                            .signUpConfirmPasswordFocusNode,
                                        autofocus: true,
                                        textInputAction: TextInputAction.done,
...
                        ),
                      ),
                    ],
                  ),
                ),
                FFButtonWidget(
                  key: ValueKey('Button_zrj7'),
                  onPressed: () async {
                    logFirebaseEvent('SIGN_UP_PAGE_SIGN_UP_BTN_ON_TAP');
                    logFirebaseEvent('Button_validate_form');
                    if (_model.formKey.currentState == null ||
                        !_model.formKey.currentState!.validate()) {
                      return;
...
