...
                                      fontStyle: FlutterFlowTheme.of(context)
                                          .titleMedium
                                          .fontStyle,
                                    ),
                              ),
                              TextFormField(
                                key: ValueKey('enterMeal_26n2'),
                                controller: _model.enterMealTextController,
                                focusNode: _model.enterMealFocusNode,
                                autofocus: false,
                                textCapitalization:
                                    TextCapitalization.sentences,
                                textInputAction: TextInputAction.next,
...
                                            TextCapitalization.sentences),
                                      );
                                    }),
                                ],
                              ),
                              FFButtonWidget(
                                key: ValueKey('Button_5zzo'),
                                onPressed: () async {
                                  logFirebaseEvent(
                                      'A_I_MEAL_PAGE_PAGE_GENERATE_BTN_ON_TAP');
                                  if (_model.enterMealTextController.text !=
                                      '') {
                                    logFirebaseEvent('Button_a_i_agent');
...
                              Align(
                                alignment: AlignmentDirectional(1.0, 0.0),
                                child: Padding(
                                  padding: EdgeInsetsDirectional.fromSTEB(
                                      0.0, 40.0, 0.0, 0.0),
                                  child: FlutterFlowIconButton(
                                    key: ValueKey('IconButton_e0ot'),
                                    borderRadius: 20.0,
                                    icon: Icon(
                                      Icons.add_circle,
                                      color:
                                          FlutterFlowTheme.of(context).primary,
                                      size: 30.0,
...
