...
                              Column(
                                mainAxisSize: MainAxisSize.max,
                                children: [
                                  Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('LogIn-email_u57v'),
                                      controller:
                                          _model.logInEmailTextController,
                                      focusNode: _model.logInEmailFocusNode,
                                      onChanged: (_) => EasyDebounce.debounce(
                                        '_model.logInEmailTextController',
                                        Duration(milliseconds: 2000),
...
                                          .asValidator(context),
                                    ),
                                  ),
                                  Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('LogIn-Password_njd6'),
                                      controller:
                                          _model.logInPasswordTextController,
                                      focusNode: _model.logInPasswordFocusNode,
                                      autofocus: false,
                                      textInputAction: TextInputAction.done,
                                      obscureText:
...
                                      ),
                                    ),
                                  ),
                                  Padding(
                                    padding: EdgeInsets.all(24.0),
                                    child: FFButtonWidget(
                                      key: ValueKey('Button_u6ae'),
                                      onPressed: () async {
                                        logFirebaseEvent(
                                            'LOG_IN_PAGE_LOG_IN_BTN_ON_TAP');
                                        logFirebaseEvent(
                                            'Button_validate_form');
                                        if (_model.formKey.currentState ==
...
