...
                                                  FlutterFlowTheme.of(context)
                                                      .titleMedium
                                                      .fontStyle,
                                            ),
                                      ),
                                      TextFormField(
                                        key: ValueKey('mealName_grro'),
                                        controller:
                                            _model.mealNameTextController,
                                        focusNode: _model.mealNameFocusNode,
                                        autofocus: false,
                                        textCapitalization:
                                            TextCapitalization.sentences,
...
                                                            .sentences),
                                              );
                                            }),
                                        ],
                                      ),
                                      FFButtonWidget(
                                        key: ValueKey('addMeal_puij'),
                                        onPressed: () async {
                                          logFirebaseEvent(
                                              'MEALS_PAGE_addMeal_ON_TAP');
                                          logFirebaseEvent(
                                              'addMeal_update_page_state');
                                          _model.clickCount =
...
                      ),
                    ),
                    Padding(
                      padding: EdgeInsetsDirectional.fromSTEB(
                          16.0, 16.0, 16.0, 12.0),
                      child: Text(
                        'Your Meals',
                        style: FlutterFlowTheme.of(context).titleLarge.override(
                              font: GoogleFonts.inter(
                                fontWeight: FontWeight.w600,
                                fontStyle: FlutterFlowTheme.of(context)
                                    .titleLarge
                                    .fontStyle,
...
